2004-09-01 Alain Magloire

	Provide IWorkingCopy.getOriginal(ICElement)
	* model/org/eclipse/cdt/core/model/IWorkingCopy.java
	* model/org/eclipse/cdt/internal/core/model/WorkinCopy.java

2004-08-31 Alain Magloire

	Fix for 72198
	* model/org/eclipse/cdt/internal/core/ExternalTranslationUnit.java
	* model/org/eclipse/cdt/internal/core/TranslationUnit.java

2004-08-27 Alain Magloire

	Fix for 72550.
	* plugin.xml

2004-08-25 Chris Wiebe

	support for matching enclosed type names
	* browser/org/eclipse/cdt/browser/AllTypesCache.java
	* browser/org/eclipse/cdt/browser/IQualifiedTypeName.java
	* browser/org/eclipse/cdt/browser/QualifiedTypeName.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/ITypeCache.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCache.java

2004-08-25 Chris Wiebe

	add namespace validation to CConventions
	* index/org/eclipse/cdt/internal/core/messages.properties
	* src/org/eclipse/cdt/core/CConventions.java

2004-08-25 Alain Magloire

	Fix for PR 72078
	* model/org/eclipse/cdt/internal/core/mode/CProject.java
	* model/org/eclipse/cdt/internal/core/mode/PathEntryManager.java
	
2004-08-24 Alain Magloire

	Fix for PR 72078
	* model/org/eclipse/cdt/internal/core/model/CModelStatus.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2004-08-23 Chris Wiebe

	fix for 68210 - add missing cpp header names
	* org/eclipse/cdt/core/template/cpp_headers

2004-08-23 Alain Magloire

	Fix for 72382
	* src/org/eclipse/cdt/core/internal/filetype/WorkspaceResolver.java

2004-08-21 Alain Magloire

	(Partial, since the indexer is still not aware of this)
	Fix for 66559: Work on the ResolverModel
	* model/org/eclipse/cdt/internal/core/model/ResolverProcessor.java
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java
	* src/org/eclipse/cdt/core/internal/filetype/WorkspaceResolver.java

2004-08-20 Chris Wiebe

	make PathUtil visible
	* browser/org/eclipse/cdt/internal/core/browser/PathUtil.java